add transparent tooltip theme, remove variant for ino-fab-set WIP

--- a/packages/elements/src/components/base/_tooltip_base.scss
+++ b/packages/elements/src/components/base/_tooltip_base.scss
@@ -54,3 +54,7 @@ $shadow-color: rgba(theme.$n-10, 0.35);
 .tippy-box[data-theme~='primary'] {
   @include tooltip(theme.$p-3, theme.$p-6);
 }
+
+.tippy-box[data-theme~='transparent'] {
+  @include tooltip(transparent, theme.$p-10);
+}
