clean up ino-fab breaking changes

--- a/packages/storybook/src/stories/ino-fab-set/ino-fab-set.scss
+++ b/packages/storybook/src/stories/ino-fab-set/ino-fab-set.scss
@@ -11,3 +11,9 @@
   min-width: 10px;
   min-height: 10px;
 }
+
+.ino-fab-set--bottom-left {
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+}
