--- a/packages/elements/src/components/base/_theme.scss
+++ b/packages/elements/src/components/base/_theme.scss
@@ -1,4 +1,6 @@
 // Theme and colors
+@use 'sass:color';
+@use 'sass:map';
 
 // Private variables.
 // Use the color() function to access theme.
@@ -38,32 +40,32 @@ $_color-map: (
   ),
   success: (
     base: $_success,
-    light: lighten($_success, 15%),
-    dark: darken($_success, 15%),
+    light: color.adjust($_success, $lightness: 15%),
+    dark: color.adjust($_success, $lightness: -15%),
     contrast: #fff,
   ),
   warning: (
     base: $_warning,
-    light: lighten($_warning, 15%),
-    dark: darken($_warning, 15%),
+    light: color.adjust($_warning, $lightness: 15%),
+    dark: color.adjust($_warning, $lightness: -15%),
     contrast: #fff,
   ),
   error: (
     base: $_error,
-    light: lighten($_error, 15%),
-    dark: darken($_error, 15%),
+    light: color.adjust($_error, $lightness: 15%),
+    dark: color.adjust($_error, $lightness: -15%),
     contrast: #fff,
   ),
   light: (
     base: $_light,
-    light: lighten($_light, 15%),
-    dark: darken($_light, 15%),
+    light: color.adjust($_light, $lightness: 15%),
+    dark: color.adjust($_light, $lightness: -15%),
     contrast: #000,
   ),
   dark: (
     base: $_dark,
-    light: lighten($_dark, 15%),
-    dark: darken($_dark, 15%),
+    light: color.adjust($_dark, $lightness: 15%),
+    dark: color.adjust($_dark, $lightness: -15%),
     contrast: #ffffff,
   ),
 );
@@ -71,5 +73,5 @@ $_color-map: (
 // Mixin to access color scheme variables
 // Usage: color: colors(primary) or colors(primary, light)
 @function color($color-name, $tone: 'base') {
-  @return map-get(map-get($_color-map, $color-name), $tone);
+  @return map.get(map.get($_color-map, $color-name), $tone);
 }
