--- a/packages/elements/src/components/base/_tooltip_base.scss
+++ b/packages/elements/src/components/base/_tooltip_base.scss
@@ -1,9 +1,9 @@
-@use '../base/mdc-customize';
+@use './mdc-customize';
 @use './new-theme' as theme;
-@import '~tippy.js/animations/scale-subtle.css';
-@import '~tippy.js/dist/svg-arrow.css';
-@import '~tippy.js/dist/tippy.css';
-@import '../base/typography';
+@use '~tippy.js/animations/scale-subtle.css';
+@use '~tippy.js/dist/svg-arrow.css';
+@use '~tippy.js/dist/tippy.css';
+@use './typography' as typo;
 
 $border-radius: 10px;
 $shadow-color: rgba(theme.$n-10, 0.35);
@@ -27,7 +27,7 @@ $shadow-color: rgba(theme.$n-10, 0.35);
 
 // global styles
 .tippy-box {
-  @include font(sans-serif, m, regular);
+  @include typo.font(sans-serif, m, regular);
   border-radius: $border-radius;
   padding: 0.2rem 0.5rem;
   z-index: 9999;
